fixing product filter wrappage

--- a/wp-content/themes/great-outdoor/css/sass/_woocommerce.scss
+++ b/wp-content/themes/great-outdoor/css/sass/_woocommerce.scss
@@ -59,6 +59,9 @@
 				width: 7px;
 				border: 1px solid $orange;
 				background: $orange;
+                position: absolute;
+                left: 0;
+                top: 0;
 			}
 	}
 
@@ -73,9 +76,13 @@
 	.prdctfltr_wc{
 		float: left;
 		width: 20%;
-		padding: 2em 5%;
+		padding: 2em 2em 2em 5%;
 		border-right: 1px solid $green;
 		box-sizing: border-box;
+
+        .prdctfltr_filter label{
+            max-width: 200px;
+        }
 	}
 
 }
